--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck = "1.15.0"
+bytemuck = {version = "1.15.0", features = ["derive"] }
 flume = "0.11.0"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 wgpu = {version = "0.19.4", features = ["glsl"]}
